Унифицировать радиус карточек

--- a/gpu-250-210.html
+++ b/gpu-250-210.html
@@ -451,7 +451,7 @@
             <!-- EXECUTION -->
             <div class="product-tabpanel" id="panel-execution" role="tabpanel" tabindex="-1" aria-labelledby="tab-execution" hidden>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <article class="bg-white border border-slate-900/10 rounded-2xl p-8">
+	                    <article class="bg-white border border-slate-900/10 ui-card p-8">
                         <h3 class="text-lg font-black uppercase tracking-tight text-slate-900">Открытое</h3>
                         <ul class="mt-4 text-sm text-slate-600 space-y-2 list-disc pl-5">
                             <li>Для размещения в помещении или под навесом.</li>
@@ -460,7 +460,7 @@
                         </ul>
                     </article>
 
-                    <article class="bg-white border border-slate-900/10 rounded-2xl p-8">
+	                    <article class="bg-white border border-slate-900/10 ui-card p-8">
                         <h3 class="text-lg font-black uppercase tracking-tight text-slate-900">В кожухе</h3>
                         <ul class="mt-4 text-sm text-slate-600 space-y-2 list-disc pl-5">
                             <li>Шумозащитный кожух и защита от внешней среды.</li>
@@ -469,7 +469,7 @@
                         </ul>
                     </article>
 
-                    <article class="bg-white border border-slate-900/10 rounded-2xl p-8">
+	                    <article class="bg-white border border-slate-900/10 ui-card p-8">
                         <h3 class="text-lg font-black uppercase tracking-tight text-slate-900">В контейнере</h3>
                         <ul class="mt-4 text-sm text-slate-600 space-y-2 list-disc pl-5">
                             <li>Максимальная готовность к установке “на улице”.</li>
@@ -653,7 +653,7 @@
                         </table>
                     </div>
 
-                    <div class="mt-10 rounded-2xl bg-slate-900 text-white p-8 border border-white/10">
+	                    <div class="mt-10 ui-card bg-slate-900 text-white p-8 border border-white/10">
                         <div class="flex flex-col lg:flex-row gap-8 items-start">
                             <div class="flex-1">
                                 <div class="text-[11px] uppercase tracking-[0.18em] text-white/70 font-black">Итог сравнения</div>
@@ -666,15 +666,15 @@
                                 </p>
                             </div>
                             <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 w-full lg:w-auto">
-                                <div class="bg-white/5 rounded-2xl p-5 border border-white/10 text-center">
+	                                <div class="bg-white/5 ui-card p-5 border border-white/10 text-center">
                                     <div class="text-3xl font-black text-accent">210</div>
                                     <div class="text-[10px] uppercase tracking-[0.22em] text-white/60 font-black mt-1">кВт постоянно</div>
                                 </div>
-                                <div class="bg-white/5 rounded-2xl p-5 border border-white/10 text-center">
+	                                <div class="bg-white/5 ui-card p-5 border border-white/10 text-center">
                                     <div class="text-3xl font-black text-accent">33%</div>
                                     <div class="text-[10px] uppercase tracking-[0.22em] text-white/60 font-black mt-1">КПД ГПУ</div>
                                 </div>
-                                <div class="bg-white/5 rounded-2xl p-5 border border-white/10 text-center">
+	                                <div class="bg-white/5 ui-card p-5 border border-white/10 text-center">
                                     <div class="text-3xl font-black text-accent">1%</div>
                                     <div class="text-[10px] uppercase tracking-[0.22em] text-white/60 font-black mt-1">точность</div>
                                 </div>
@@ -806,7 +806,7 @@
                             </div>
                         </div>
 
-                        <div class="mt-10 rounded-2xl bg-white/70 border border-slate-900/10 p-8">
+	                    <div class="mt-10 ui-card bg-white/70 border border-slate-900/10 p-8">
                             <div class="text-sm font-black uppercase tracking-wider mb-6">ООО «ЭЛЕМЕНТ»</div>
                             <div class="grid grid-cols-1 sm:grid-cols-2 gap-y-3 gap-x-8 text-sm">
                                 <div class="text-slate-500">ИНН: <span class="font-semibold text-slate-800">1218002079</span></div>
