--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
                             </div>
                         </div>
 
-	                        <div
-	                            class="p-6 bg-white/70 rounded-2xl border border-slate-900/10 inline-flex items-center gap-6 backdrop-blur-md shadow-sm">
-	                            <div class="relative">
-	                                <img src="https://i.pravatar.cc/100?img=11" alt="Engineer"
-	                                    class="w-16 h-16 rounded-full border-2 border-accent">
+		                        <div
+		                            class="p-6 ui-card bg-white/70 border border-slate-900/10 inline-flex items-center gap-6 backdrop-blur-md shadow-sm">
+		                            <div class="relative">
+		                                <img src="https://i.pravatar.cc/100?img=11" alt="Engineer"
+		                                    class="w-16 h-16 rounded-full border-2 border-accent">
 	                                <div
 	                                    class="absolute bottom-0 right-0 w-4 h-4 bg-green-500 rounded-full border-2 border-white">
 	                                </div>
@@ -294,10 +294,10 @@
                     </div>
 
 	                    <div class="lg:w-2/5 w-full">
-	                        <form class="space-y-4 bg-white/70 backdrop-blur-md p-8 rounded-3xl border border-slate-900/10 shadow-sm">
-	                            <div>
-	                                <label
-	                                    class="text-[10px] uppercase font-black text-slate-500 tracking-[0.2em] mb-2 block">Ваше
+		                        <form class="space-y-4 ui-card bg-white/70 backdrop-blur-md p-8 border border-slate-900/10 shadow-sm">
+		                            <div>
+		                                <label
+		                                    class="text-[10px] uppercase font-black text-slate-500 tracking-[0.2em] mb-2 block">Ваше
 	                                    имя</label>
 	                                <input type="text" placeholder="Иван Иванов"
 	                                    class="w-full bg-white border border-slate-900/10 rounded-xl px-5 py-4 text-slate-900 placeholder:text-slate-400 focus:outline-none focus:border-accent transition">
