--- a/leasing.html
+++ b/leasing.html
@@ -104,12 +104,12 @@
                                 </div>
 
                                 <div class="mt-6 grid grid-cols-1 gap-3">
-                                    <div class="p-4 rounded-2xl bg-white/70 border border-slate-900/10">
+                                    <div class="p-4 ui-card bg-white/70 border border-slate-900/10">
                                         <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-500">Ставка</div>
                                         <div class="mt-2 font-black text-slate-900">6% для российского / 8% для иностранного</div>
                                         <div class="mt-1 text-xs text-slate-500">в рамках льготных продуктов</div>
                                     </div>
-                                    <div class="p-4 rounded-2xl bg-white/70 border border-slate-900/10">
+                                    <div class="p-4 ui-card bg-white/70 border border-slate-900/10">
                                         <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-500">Кому доступно</div>
                                         <div class="mt-2 text-sm text-slate-700 leading-relaxed">
                                             Юр.лица и ИП из Единого реестра субъектов МСП (микро- или малое предприятие).
@@ -306,25 +306,25 @@
                         <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-500">Результаты</div>
 
                         <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-1 gap-4">
-                            <div class="p-5 rounded-2xl bg-white/70 border border-slate-900/10">
+                            <div class="p-5 ui-card bg-white/70 border border-slate-900/10">
                                 <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-500">Ежемесячный платеж</div>
                                 <div id="lease-monthly" class="mt-2 text-3xl font-black tracking-tight text-slate-900">-</div>
                                 <div class="mt-2 text-xs text-slate-500">Ориентир. Итог зависит от требований лизингодателя и состава сделки.</div>
                             </div>
 
-                            <div class="p-5 rounded-2xl bg-white/70 border border-slate-900/10">
+                            <div class="p-5 ui-card bg-white/70 border border-slate-900/10">
                                 <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-500">Удорожание (переплата)</div>
                                 <div id="lease-overpay" class="mt-2 text-2xl font-black tracking-tight text-slate-900">-</div>
                                 <div id="lease-overpay-hint" class="mt-2 text-xs text-slate-500">-</div>
                             </div>
 
-                            <div class="p-5 rounded-2xl bg-white/70 border border-slate-900/10">
+                            <div class="p-5 ui-card bg-white/70 border border-slate-900/10">
                                 <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-500">Стоимость лизинга</div>
                                 <div id="lease-cost" class="mt-2 text-2xl font-black tracking-tight text-slate-900">-</div>
                                 <div class="mt-2 text-xs text-slate-500">Сумма платежей без учета аванса.</div>
                             </div>
 
-                            <div class="p-5 rounded-2xl bg-white/70 border border-slate-900/10">
+                            <div class="p-5 ui-card bg-white/70 border border-slate-900/10">
                                 <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-500">Сумма договора</div>
                                 <div id="lease-total" class="mt-2 text-2xl font-black tracking-tight text-slate-900">-</div>
                                 <div class="mt-2 text-xs text-slate-500">Включает аванс.</div>
@@ -372,7 +372,7 @@
                                 </div>
                             </div>
 
-                            <div class="mt-8 p-5 rounded-2xl bg-white/70 border border-slate-900/10 text-sm text-slate-600 leading-relaxed">
+                            <div class="mt-8 p-5 ui-card bg-white/70 border border-slate-900/10 text-sm text-slate-600 leading-relaxed">
                                 Важно: поставщик оборудования, как правило, должен быть налоговым резидентом РФ. По льготным продуктам обычно финансируется новое оборудование, не бывшее в эксплуатации.
                             </div>
                         </div>
@@ -386,7 +386,7 @@
                                 Заполним анкету, уточним параметры оборудования и подготовим предложение.
                             </p>
 
-                            <form class="space-y-4 bg-white/70 backdrop-blur-md p-6 rounded-3xl border border-slate-900/10 shadow-sm mt-8">
+                            <form class="space-y-4 ui-card bg-white/70 backdrop-blur-md p-6 border border-slate-900/10 shadow-sm mt-8">
                                 <div>
                                     <label class="text-[10px] uppercase font-black text-slate-500 tracking-[0.2em] mb-2 block">Ваше имя</label>
                                     <input type="text" placeholder="Иван Иванов"
