--- a/ngpu.html
+++ b/ngpu.html
@@ -61,7 +61,7 @@
                     </p>
 
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-10">
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
+                        <div class="ui-card bg-white/5 border border-white/10 p-5">
                             <div class="text-[11px] font-black uppercase tracking-[0.18em] text-accent mb-2">
                                 Охлаждаемая турбина
                             </div>
@@ -69,7 +69,7 @@
                                 Защита от перегрева на высококалорийном газе. Увеличение ресурса в 3 раза.
                             </div>
                         </div>
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
+                        <div class="ui-card bg-white/5 border border-white/10 p-5">
                             <div class="text-[11px] font-black uppercase tracking-[0.18em] text-accent mb-2">
                                 Водоохлаждаемый интеркулер
                             </div>
@@ -77,7 +77,7 @@
                                 Стабильная температура смеси для исключения детонации.
                             </div>
                         </div>
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
+                        <div class="ui-card bg-white/5 border border-white/10 p-5">
                             <div class="text-[11px] font-black uppercase tracking-[0.18em] text-accent mb-2">
                                 Степень сжатия 1:8
                             </div>
@@ -85,7 +85,7 @@
                                 «Всеядность» к нестабильному и тяжелому составу газа.
                             </div>
                         </div>
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
+                        <div class="ui-card bg-white/5 border border-white/10 p-5">
                             <div class="text-[11px] font-black uppercase tracking-[0.18em] text-accent mb-2">
                                 Блок антидетонации
                             </div>
@@ -96,13 +96,13 @@
                     </div>
 
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-10">
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-6">
+                        <div class="ui-card bg-white/5 border border-white/10 p-6">
                             <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">
                                 На открытой раме
                             </div>
                             <div class="mt-2 text-3xl font-black text-white tracking-tight">8 000 000 ₽</div>
                         </div>
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-6">
+                        <div class="ui-card bg-white/5 border border-white/10 p-6">
                             <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">
                                 В контейнере ПБК
                             </div>
@@ -126,7 +126,7 @@
                     <div class="absolute -top-16 -right-16 w-80 h-80 bg-accent/15 rounded-full blur-[90px]"></div>
                     <div class="absolute -bottom-16 -left-16 w-80 h-80 bg-sky-500/10 rounded-full blur-[90px]"></div>
 
-                    <div class="relative rounded-3xl bg-white/5 border border-white/10 p-6">
+                    <div class="relative ui-card bg-white/5 border border-white/10 p-6">
                         <img src="assets/site-photos/gpu/gpu-250.jpg" alt="ГПУ Элемент 250 кВт для ПНГ"
                             class="w-full h-auto rounded-2xl object-contain">
                         <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
@@ -290,7 +290,7 @@
                             </div>
                         </div>
 
-                        <div class="mt-10 rounded-2xl bg-white/70 border border-slate-900/10 p-8">
+                        <div class="mt-10 ui-card bg-white/70 border border-slate-900/10 p-8">
                             <div class="text-sm font-black uppercase tracking-wider mb-6">ООО «ЭЛЕМЕНТ»</div>
                             <div class="grid grid-cols-1 sm:grid-cols-2 gap-y-3 gap-x-8 text-sm">
                                 <div class="text-slate-500">ИНН: <span class="font-semibold text-slate-800">1218002079</span></div>
