--- a/proizvodstvo.html
+++ b/proizvodstvo.html
@@ -73,17 +73,17 @@
                     </div>
 
                     <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 mt-10">
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
+                        <div class="ui-card bg-white/5 border border-white/10 p-5">
                             <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">Вложения</div>
                             <div class="mt-2 text-3xl font-black text-white tracking-tight">0 ₽</div>
                             <div class="text-xs text-slate-300 font-bold uppercase tracking-widest mt-2">CAPEX</div>
                         </div>
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
+                        <div class="ui-card bg-white/5 border border-white/10 p-5">
                             <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">Скидка</div>
                             <div class="mt-2 text-3xl font-black text-white tracking-tight">−20–25%</div>
                             <div class="text-xs text-slate-300 font-bold uppercase tracking-widest mt-2">к сети</div>
                         </div>
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-5">
+                        <div class="ui-card bg-white/5 border border-white/10 p-5">
                             <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">Сервис</div>
                             <div class="mt-2 text-3xl font-black text-white tracking-tight">24/7</div>
                             <div class="text-xs text-slate-300 font-bold uppercase tracking-widest mt-2">мониторинг</div>
@@ -95,7 +95,7 @@
                     <div class="absolute -top-16 -right-16 w-80 h-80 bg-accent/15 rounded-full blur-[90px]"></div>
                     <div class="absolute -bottom-16 -left-16 w-80 h-80 bg-sky-500/10 rounded-full blur-[90px]"></div>
 
-                    <div class="relative rounded-3xl bg-white/5 border border-white/10 p-6">
+                    <div class="relative ui-card bg-white/5 border border-white/10 p-6">
                         <img src="https://images.unsplash.com/photo-1584270354949-c26b0d6c2c73?q=80&w=1800&auto=format&fit=crop"
                             alt="Собственная генерация на площадке" class="w-full h-auto rounded-2xl object-cover">
                         <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
@@ -103,7 +103,7 @@
                         </div>
                     </div>
 
-                    <div class="mt-6 rounded-3xl bg-white/5 border border-white/10 p-6">
+                    <div class="mt-6 ui-card bg-white/5 border border-white/10 p-6">
                         <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">Подходит, если</div>
                         <div class="mt-3 grid grid-cols-1 sm:grid-cols-2 gap-3 text-sm text-slate-200">
                             <div class="flex gap-2"><i class="fa-solid fa-circle-check text-accent mt-1"></i><span>Платите высокий тариф</span></div>
@@ -197,7 +197,7 @@
                             <li class="flex gap-3"><i class="fa-solid fa-circle-check text-accent mt-1"></i><span><span class="font-bold text-slate-900">Гарантированная мощность</span>: снимаем риски ограничений и дефицита.</span></li>
                         </ul>
 
-                        <div class="mt-10 rounded-2xl bg-accent/5 border border-accent/20 p-6">
+                        <div class="mt-10 ui-card bg-accent/5 border border-accent/20 p-6">
                             <div class="text-xs font-black uppercase tracking-[0.18em] text-accent mb-2">Важно</div>
                             <div class="text-sm text-slate-600 leading-relaxed">
                                 При остановке станции по нашей вине вы переключаетесь на сеть, а мы компенсируем разницу.
@@ -234,7 +234,7 @@
                     </article>
                 </div>
 
-                <div class="mt-10 rounded-3xl bg-slate-900 text-white p-10 md:p-12 shadow-[0_26px_60px_rgba(15,23,42,0.22)]">
+                <div class="mt-10 ui-card bg-slate-900 text-white p-10 md:p-12 shadow-[0_26px_60px_rgba(15,23,42,0.22)]">
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 items-start">
                         <div class="md:col-span-2">
                             <div class="text-xs uppercase font-black tracking-[0.2em] text-slate-300">Гарантия надежности</div>
@@ -243,7 +243,7 @@
                                 Если станция остановится по нашей вине, вы автоматически переходите на сеть, а мы компенсируем разницу в стоимости электроэнергии.
                             </p>
                         </div>
-                        <div class="rounded-2xl bg-white/5 border border-white/10 p-6">
+                        <div class="ui-card bg-white/5 border border-white/10 p-6">
                             <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">SLA</div>
                             <div class="mt-2 text-4xl font-black text-accent tracking-tight">99,9%</div>
                             <div class="text-sm text-slate-300 font-bold uppercase tracking-widest">готовность</div>
@@ -291,7 +291,7 @@
                         </div>
 
                         <div>
-                            <form class="space-y-4 bg-white/70 backdrop-blur-md p-8 rounded-3xl border border-slate-900/10 shadow-sm">
+                            <form class="space-y-4 ui-card bg-white/70 backdrop-blur-md p-8 border border-slate-900/10 shadow-sm">
                                 <div>
                                     <label class="text-[10px] uppercase font-black text-slate-500 tracking-[0.2em] mb-2 block">Ваше имя</label>
                                     <input type="text" placeholder="Иван Иванов"
