--- a/services.html
+++ b/services.html
@@ -58,10 +58,10 @@
                     </p>
                 </div>
 
-                <div class="rounded-3xl bg-white/5 border border-white/10 p-6">
-                    <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">
-                        Быстрый запрос
-                    </div>
+	                <div class="ui-card bg-white/5 border border-white/10 p-6">
+	                    <div class="text-[10px] uppercase font-black tracking-[0.22em] text-slate-300">
+	                        Быстрый запрос
+	                    </div>
                     <a href="contacts.html"
                         class="btn-primary mt-4 w-full py-5 rounded-xl font-black uppercase text-[11px] tracking-widest text-white text-center hover:brightness-110 transition-all block">
                         Связаться с инженером
