--- a/agroprom.html
+++ b/agroprom.html
@@ -68,9 +68,9 @@
                     </div>
                 </div>
 
-                <div class="relative rounded-3xl bg-white/5 border border-white/10 p-6">
-                    <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?q=80&w=1800&auto=format&fit=crop"
-                        alt="Агропром" class="w-full h-auto rounded-2xl object-cover">
+	                <div class="relative ui-card bg-white/5 border border-white/10 p-6">
+	                    <img src="https://images.unsplash.com/photo-1600891964599-f61ba0e24092?q=80&w=1800&auto=format&fit=crop"
+	                        alt="Агропром" class="w-full h-auto rounded-2xl object-cover">
                     <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
                         Электроэнергия и тепло для технологических процессов
                     </div>
@@ -149,4 +149,3 @@
 </body>
 
 </html>
-
