--- a/datacenters.html
+++ b/datacenters.html
@@ -68,10 +68,10 @@
                     </div>
                 </div>
 
-                <div class="relative rounded-3xl bg-white/5 border border-white/10 p-6">
-                    <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?q=80&w=1800&auto=format&fit=crop"
-                        alt="Дата-центр" class="w-full h-auto rounded-2xl object-cover">
-                    <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
+	                <div class="relative ui-card bg-white/5 border border-white/10 p-6">
+	                    <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc31?q=80&w=1800&auto=format&fit=crop"
+	                        alt="Дата-центр" class="w-full h-auto rounded-2xl object-cover">
+	                    <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
                         Надежность, резервирование, масштабирование
                     </div>
                 </div>
@@ -186,4 +186,3 @@
 </body>
 
 </html>
-
