--- a/gpu-product.html
+++ b/gpu-product.html
@@ -131,7 +131,7 @@
                 const root = document.getElementById('gpu-product-root');
                 if (!root) return;
                 root.innerHTML = `
-                    <div class="bg-white/70 border border-slate-200/70 rounded-2xl p-8 shadow-[0_18px_40px_rgba(15,23,42,0.08)]">
+	                    <div class="bg-white/70 border border-slate-200/70 ui-card p-8 shadow-[0_18px_40px_rgba(15,23,42,0.08)]">
                         <h1 class="text-2xl md:text-3xl font-black uppercase tracking-tight text-slate-900 mb-3">Товар не найден</h1>
                         <p class="text-slate-600 mb-6">Похоже, ссылка некорректна или позиция удалена.</p>
                         <a class="btn-primary inline-flex items-center justify-center gap-2 px-6 py-3 rounded-xl font-black uppercase text-[11px] tracking-widest text-white"
@@ -158,7 +158,7 @@
 
                 root.innerHTML = `
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-                        <section class="bg-slate-950 rounded-3xl border border-white/10 overflow-hidden shadow-2xl">
+	                        <section class="bg-slate-950 ui-card border border-white/10 overflow-hidden shadow-2xl">
                             <div class="relative">
                                 <div class="absolute inset-0 bg-accent/10"></div>
                                 <img src="${imgSrc}" alt="${title}" class="relative w-full h-72 md:h-96 object-cover">
@@ -167,11 +167,11 @@
                                 <h1 class="text-2xl md:text-4xl font-black uppercase tracking-tight text-white leading-tight">${title}</h1>
 
                                 <div class="grid grid-cols-2 gap-3 mt-6">
-                                    <div class="bg-white/5 rounded-2xl p-4 border border-white/10">
+	                                    <div class="bg-white/5 ui-card p-4 border border-white/10">
                                         <div class="text-[10px] uppercase font-black tracking-[0.18em] text-slate-400 mb-1">Макс. мощность</div>
                                         <div class="text-xl font-black text-accent">${maxKw}</div>
                                     </div>
-                                    <div class="bg-white/5 rounded-2xl p-4 border border-white/10">
+	                                    <div class="bg-white/5 ui-card p-4 border border-white/10">
                                         <div class="text-[10px] uppercase font-black tracking-[0.18em] text-slate-400 mb-1">Постоянная мощность</div>
                                         <div class="text-xl font-black text-white">${contKw}</div>
                                     </div>
@@ -191,7 +191,7 @@
                             </div>
                         </section>
 
-                        <section class="bg-slate-900 rounded-3xl border border-white/10 p-7 md:p-9 shadow-2xl">
+	                        <section class="bg-slate-900 ui-card border border-white/10 p-7 md:p-9 shadow-2xl">
                             <h2 class="text-xs font-black uppercase tracking-[0.2em] text-accent mb-6">Характеристики</h2>
                             <div>
                                 ${Object.entries(specs).length ? Object.entries(specs).map(([k, v]) => `
@@ -218,4 +218,3 @@
 </body>
 
 </html>
-
