--- a/mining.html
+++ b/mining.html
@@ -68,9 +68,9 @@
                     </div>
                 </div>
 
-                <div class="relative rounded-3xl bg-white/5 border border-white/10 p-6">
-                    <img src="https://images.unsplash.com/photo-1625014618427-fbc980b974f5?q=80&w=1800&auto=format&fit=crop"
-                        alt="Майнинг" class="w-full h-auto rounded-2xl object-cover">
+	                <div class="relative ui-card bg-white/5 border border-white/10 p-6">
+	                    <img src="https://images.unsplash.com/photo-1625014618427-fbc980b974f5?q=80&w=1800&auto=format&fit=crop"
+	                        alt="Майнинг" class="w-full h-auto rounded-2xl object-cover">
                     <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
                         Энергия, вентиляция, контроль режимов
                     </div>
@@ -156,4 +156,3 @@
 </body>
 
 </html>
-
