--- a/neftegaz.html
+++ b/neftegaz.html
@@ -80,9 +80,9 @@
                     <div class="absolute -top-16 -right-16 w-80 h-80 bg-accent/15 rounded-full blur-[90px]"></div>
                     <div class="absolute -bottom-16 -left-16 w-80 h-80 bg-sky-500/10 rounded-full blur-[90px]"></div>
 
-                    <div class="relative rounded-3xl bg-white/5 border border-white/10 p-6">
-                        <img src="https://images.unsplash.com/photo-1548013146-72479768bada?q=80&w=1800&auto=format&fit=crop"
-                            alt="Нефтегазовый объект" class="w-full h-auto rounded-2xl object-cover">
+	                    <div class="relative ui-card bg-white/5 border border-white/10 p-6">
+	                        <img src="https://images.unsplash.com/photo-1548013146-72479768bada?q=80&w=1800&auto=format&fit=crop"
+	                            alt="Нефтегазовый объект" class="w-full h-auto rounded-2xl object-cover">
                         <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
                             Надежность энергоснабжения для удаленных объектов
                         </div>
@@ -199,4 +199,3 @@
 </body>
 
 </html>
-
