--- a/production.html
+++ b/production.html
@@ -58,9 +58,9 @@
                     </p>
                 </div>
 
-                <div class="relative rounded-3xl bg-white/5 border border-white/10 p-6">
-                    <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc?q=80&w=1800&auto=format&fit=crop"
-                        alt="Производство" class="w-full h-auto rounded-2xl object-cover">
+	                <div class="relative ui-card bg-white/5 border border-white/10 p-6">
+	                    <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc?q=80&w=1800&auto=format&fit=crop"
+	                        alt="Производство" class="w-full h-auto rounded-2xl object-cover">
                     <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
                         Йошкар-Ола · производство и сервисный хаб
                     </div>
@@ -142,4 +142,3 @@
 </body>
 
 </html>
-
