--- a/zhkh.html
+++ b/zhkh.html
@@ -68,10 +68,10 @@
                     </div>
                 </div>
 
-                <div class="relative rounded-3xl bg-white/5 border border-white/10 p-6">
-                    <img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?q=80&w=1800&auto=format&fit=crop"
-                        alt="ЖКХ" class="w-full h-auto rounded-2xl object-cover">
-                    <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
+	                <div class="relative ui-card bg-white/5 border border-white/10 p-6">
+	                    <img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?q=80&w=1800&auto=format&fit=crop"
+	                        alt="ЖКХ" class="w-full h-auto rounded-2xl object-cover">
+	                    <div class="mt-4 text-xs uppercase tracking-[0.18em] text-slate-300 font-bold">
                         Резервирование и автономность для критичной инфраструктуры
                     </div>
                 </div>
@@ -151,4 +151,3 @@
 </body>
 
 </html>
-
