--- a/projects/projects-mining-energycenter-20mw.html
+++ b/projects/projects-mining-energycenter-20mw.html
@@ -7,20 +7,39 @@
 	    <title>Энергоцентр для майнинга 20 МВт | Проекты | Элемент Энергия</title>
 
 	    <script>
-	      (function () {
-	        var p = String(location.pathname || '');
-	        if (location.protocol === 'file:') {
-	          var marker = '/gkee.ru/';
-	          var idx = p.lastIndexOf(marker);
-	          if (idx >= 0) p = p.slice(idx + marker.length);
-	        }
-	        p = p.replace(/^\/+/, '');
-	        if (!p.endsWith('/')) p = p.replace(/[^/]*$/, '');
-	        var depth = p.split('/').filter(Boolean).length;
-	        var prefix = depth ? Array(depth + 1).join('../') : './';
-	        document.write('<base href="' + prefix + '">');
-	      })();
-	    </script>
+        (function () {
+            var protocol = location.protocol || '';
+            var host = String(location.host || '');
+            var pathname = String(location.pathname || '/');
+
+            // Support opening pages directly from disk.
+            if (protocol === 'file:') {
+                var p = pathname;
+                var marker = '/gkee.ru/';
+                var idx = p.lastIndexOf(marker);
+                if (idx >= 0) p = p.slice(idx + marker.length);
+
+                p = p.replace(/^\/+/, '');
+                if (!p.endsWith('/')) p = p.replace(/[^/]*$/, '');
+                var depth = p.split('/').filter(Boolean).length;
+                var prefix = depth ? Array(depth + 1).join('../') : './';
+                document.write('<base href="' + prefix + '">');
+                return;
+            }
+
+            // GitHub Pages default URL: https://<user>.github.io/<repo>/...
+            if (host.endsWith('github.io')) {
+                var parts = pathname.split('/').filter(Boolean);
+                if (parts.length) {
+                    document.write('<base href="/' + parts[0] + '/">');
+                    return;
+                }
+            }
+
+            // Default: site is served from the domain root (or via a custom GitHub Pages domain).
+            document.write('<base href="/">');
+        })();
+    </script>
 
 	    <script>
 	      window.tailwind = window.tailwind || {};
